<resources>
    <string name="app_name">Trouveur d\'articles</string>
    <string name="settings">Paramètres</string>
    <string name="custom_permission_description">Accès aux options de l\'application</string>
    <string name="historique_de_disponibilite">Historique de disponibilité</string>
    <string name="temps_entre_les_rafraichissements">Temps entre les rafraichissements</string>
    <string name="temps_entre_les_rafraichissements_cell">Temps entre les rafraichissements lorsque le téléphone utilise des données cellulaire</string>
    <string name="temps_entre_les_rafraichissements_plugged">Temps entre les rafraichissements lorsque le téléphone est branché</string>
    <string name="d_sactiver_le_rafraichissement_cell">Désactiver le rafraichissement lors d\'utilisation de données cellulaires</string>
    <string name="d_sactiver_le_rafraichissement_low_battery">Désactiver le rafraichissement lorsque la batterie est faible (20% et moins)</string>
    <string name="remplacer_automatiquement_le_nom_du_produit">Remplacer automatiquement le nom du produit par celui de la page web</string>
    <string name="automatiquement_rafraichir_la_page_d_accueil">Automatiquement rafraichir la page d\'accueil chaque 10 secondes</string>
    <string name="donner_les_permissions_de_notifications">Donner les permissions de notifications</string>
    <string name="supprimer_les_donn_es_des_pages_de_produits">Supprimer les données des pages de produits</string>
    <string name="vider">Vider</string>
    <string name="rechercher">Rechercher</string>
    <string name="retour">Retour</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="nom_du_produit">Nom du produit</string>
    <string name="lien_amazon_ca">Lien Amazon.ca</string>
    <string name="lien_newegg_ca">Lien Newegg.ca</string>
    <string name="lien_canadacomputers_com">Lien CanadaComputers.com</string>
    <string name="lien_memoryexpress_com">Lien MemoryExpress.com</string>
    <string name="prix_desire">Prix désiré</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="ajouter_le_produit">Ajouter le produit</string>
    <string name="modifier">Modifier</string>
    <string name="produit_s_suivi_s">Produit(s) suivi(s)</string>
    <string name="synchroniser">Synchroniser</string>
    <string name="accueil">Accueil</string>
    <string name="options">Options</string>
    <string name="lancer_le_service_de_suivi">Lancer le service de suivi</string>
    <string name="arr_ter_le_service_de_suivi">Arrêter le service de suivi</string>
    <string name="rafraichir_les_donnees">Rafraichir les données</string>
    <string name="produit_est_disponible_au_prix_de">Le produit %s est maintenant disponible au prix de %s</string>
    <string name="suivi_de_produit_amazon">Suivi de produit Amazon</string>
    <string name="suivi_de_produit_newegg">Suivi de produit Newegg</string>
    <string name="suivi_de_produit_canadacomputers">Suivi de produit CanadaComputers</string>
    <string name="suivi_de_produit_memoryexpress">Suivi de produit MemoryExpress</string>
    <string name="etes_vous_certain_de_vouloir_supprimer_le_produit">Êtes vous certain de vouloir supprimer le produit: %s?</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmer">Confirmer</string>
    <string name="batterie_faible">Batterie faible!</string>
    <string name="la_batterie_de_votre_appareil_est_faible">La batterie de votre appareil est faible, vous devriez brancher votre appareil pour obtenir les données les plus à jour possible.</string>
    <string name="rupture_de_stock">Rupture de stock</string>
    <string name="aucune_donnees">Aucune données</string>
    <string name="service_de_suivi">Service de suivi</string>
    <string name="service_foreground_suivi">Service d\'avant-plan pour le suivi des articles</string>
    <string name="suivi_de_vos_produits">Suivi de vos produits...</string>
    <string name="url_invalide">URL invalide!</string>
    <string name="modification_un_produit">Modification d\'un produit</string>
    <string name="impossible_obtenir_le_nom_automatiquement">Impossible d\'obtenir le nom automatiquement</string>
    <string name="produit_modifie">Produit modifié!</string>
    <string name="impossible_de_modifier_le_produit">Impossible de modifier le produit!</string>
    <string name="produit_ajoute">Produit ajouté!</string>
    <string name="impossible_ajouter_le_produit">Impossible d\'ajouter le produit!</string>
    <string name="suivi_du_status_de_larticle">Suivi du status de l\'article!</string>
    <string name="trouvez_les_articles_en_demande">Trouvez les articles en demande!</string>
    <string name="impossible_aller_dans_les_options">Impossible d\'aller dans les options. Vous devez donner la permission à l\'application</string>
    <string name="changer_les_parametres_de_lapplication">Changez les paramètres de l\'application</string>
    <string name="etes_vous_certain_supprimer_page_produit">Êtes vous certain de vouloir supprimer les données des pages de produits?</string>
    <string name="donnees_des_pages_de_produits_supprimes">Données des pages de produits supprimés!</string>
    <string name="etes_vous_certain_reinitialiser_parametres_application">Êtes vous certain de vouloir réinitialiser les paramètres de l\'application?</string>
    <string name="parametres_sauvegardes">Les paramètres ont été sauvegardés!</string>
    <string name="cette_application_besoin_permission">Cette application a besoin d\'une permission pour ouvrir la page d\'options. Allez dans les paramètres Android de l\'application pour l\'activer.</string>
    <string name="ouvrir_les_parametres">Ouvrir les paramètres</string>
    <string name="canal_trouveur_article">Canal du trouveur d\'article</string>
</resources>