<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_options"
        android:title="@string/options"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_scrapping"
        android:title="@string/lancer_le_service_de_suivi"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_scrapping"
        android:title="@string/arr_ter_le_service_de_suivi"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_graph"
        android:title="@string/rafraichir_les_donnees"
        android:orderInCategory="300"
        android:visible="false"
        app:showAsAction="never" />
</menu>
