<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/settings_toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/temps_entre_les_rafraichissements" />

        <EditText
            android:id="@+id/refresh_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/temps_entre_les_rafraichissements_cell" />

        <EditText
            android:id="@+id/refresh_time_cell_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/temps_entre_les_rafraichissements_plugged" />

        <EditText
            android:id="@+id/refresh_time_cell_plugged_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/border"/>

        <CheckBox
            android:id="@+id/disable_cell_data_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:text="@string/d_sactiver_le_rafraichissement_cell" />

        <CheckBox
            android:id="@+id/disable_refresh_battery_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:text="@string/d_sactiver_le_rafraichissement_low_battery" />

        <CheckBox
            android:id="@+id/automatically_replace_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:text="@string/remplacer_automatiquement_le_nom_du_produit" />

        <CheckBox
            android:id="@+id/automatically_refresh_home_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:text="@string/automatiquement_rafraichir_la_page_d_accueil" />

        <Button
            android:id="@+id/give_notifications_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/donner_les_permissions_de_notifications"
            android:onClick="GiveNotificationsPermission" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/supprimer_les_donn_es_des_pages_de_produits"
            android:onClick="DeleteScrapeResults" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/settings_back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/retour"
            android:onClick="Retour"/>

        <Button
            android:id="@+id/settings_save_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/sauvegarder"
            android:onClick="Sauvegarder" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>