<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_product_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/ajouter_un_produit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/nom_du_produit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <EditText
                android:id="@+id/product_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/border"/>

            <ImageButton
                android:id="@+id/product_name_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/vider"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/lien_amazon_ca" />

        <net.info420.trouveurarticle.views.AddProductButtonGroup
            android:id="@+id/amazon_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/lien_newegg_ca" />

        <net.info420.trouveurarticle.views.AddProductButtonGroup
            android:id="@+id/newegg_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/lien_canadacomputers_com" />

        <net.info420.trouveurarticle.views.AddProductButtonGroup
            android:id="@+id/canada_computers_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/lien_memoryexpress_com" />

        <net.info420.trouveurarticle.views.AddProductButtonGroup
            android:id="@+id/memory_express_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/prix_desire" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <EditText
                android:id="@+id/price_textbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:background="@drawable/border"/>

            <ImageButton
                android:id="@+id/price_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/vider"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/reinitialiser" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/ajouter_le_produit" />

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modifier"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>